k8s-manifests/inv-msa-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inv-msa-product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inv-msa-product
  template:
    metadata:
      labels:
        app: inv-msa-product
    spec:
      containers:
      - name: inv-msa-product
        image: inv-msa-product
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inv-msa-product
spec:
  ports:
    - port: 8080
  selector:
    app: inv-msa-product
